dropdown overlaping issue

--- a/apps/web-giddh-admin/src/app/subscription/components/edit-subscriptions/edit-subscriptions.component.scss
+++ b/apps/web-giddh-admin/src/app/subscription/components/edit-subscriptions/edit-subscriptions.component.scss
@@ -3,6 +3,9 @@
 }
 
 .multiselect-dropdown {
-    max-height: 207px;
+    max-height: 200px !important;
     overflow-y: auto;
+}
+.dropdown-table {
+  min-height: 240px;
 }
